Retorna xml en json